updated styling on buttons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <!-- container inside header for highscore link/button and timer -->
       <div class="container">
 
-        <button type="button" class="btn btn-outline-dark" id="highscores">View High Scores</button>
+        <button type="button" class="btn btn-outline-dark btn-sm" id="highscores">View High Scores</button>
         <p i="timer">Timer</p>
       </div>
     </header>
@@ -26,7 +26,7 @@
         <h1 class="text-center">Coding Quiz Challenge</h1>  
       <h4 class="text-center">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!</h4>
         <hr class="my-4">  
-      <button type="button" class="btn btn-primary" id="startButton">Start Quiz</button>
+      <button type="button" class="btn btn-primary btn-sm" id="startButton">Start Quiz</button>
       
         <div class="btn-group-vertical" role="group" aria-label="Basic example">
           <button type="button" class="btn btn-secondary" id="answer1">Answer1</button>
