finished scoreboard function

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <input type="initials" class="form-control" id="initials" placeholder="MM">
               </div>
             <a class="btn btn-primary btn-lg" id="submit-button" href="#" role="button">Submit</a>
-            <p id="scores"></p>
+            <ul id="scores"></ul>
           </div>
         </div>
     </div>
